# trajectory_estimate_ws

./: .gitignore  README.md
py_test/: README.md  csv_vicon_cet_1_08_normalizacija_tacaka.py  drugi_nacin_mirko.py  ekf_test.py  plot_numpy.py  trajectory_0000.npy  trajectory_estimate.py
py_test/data/: Cet_1_06.csv  Cet_1_07.csv  Cet_1_08.csv  Cet_2_01.csv  Cet_2_02.csv  Cet_2_03.csv  Cet_2_04.csv  Cet_2_05.csv  Cet_2_06.csv  Cet_2_07.csv  Cet_2_08.csv  Cet_2_09.csv  Cet_2_10.csv  Cet_2_11.csv  Cet_2_12.csv  Cet_2_13.csv  Cet_2_14.csv  Cet_2_15.csv  D12_0103.csv  D12_proba.csv  D12_proba01.csv
py_test/data/05_01_2024_11_11_06/: run_0_t_0.npy  run_0_t_1.npy  run_0_t_10.npy  run_0_t_100.npy  run_0_t_1000.npy  run_0_t_10000.npy  run_0_t_10001.npy  run_0_t_10002.npy  run_0_t_10003.npy  run_0_t_10004.npy  run_0_t_10005.npy  run_0_t_10006.npy  run_0_t_10007.npy  run_0_t_10008.npy  run_0_t_10009.npy  run_0_t_1001.npy  run_0_t_10010.npy  run_0_t_10011.npy  run_0_t_10012.npy  run_0_t_10013.npy  run_0_t_10014.npy  run_0_t_10015.npy  run_0_t_10016.npy  run_0_t_10017.npy  run_0_t_10018.npy  run_0_t_10019.npy  run_0_t_1002.npy  run_0_t_10020.npy  run_0_t_10021.npy  run_0_t_10022.npy  run_0_t_10023.npy  (+99969 more)
src/abb_communication/: package.xml  setup.cfg  setup.py
src/abb_interface/: CMakeLists.txt  package.xml
src/abb_wand_track/: package.xml  setup.cfg  setup.py
src/trajectory_estimator/: package.xml  setup.cfg  setup.py
src/vicon_ball/: CMakeLists.txt  README.md  package.xml
src/vicon_ball/src/: ball_vicon.cpp
src/vicon_data_collector/: package.xml  setup.cfg  setup.py
(+50 files in other folders)
